--- a/assets/scss/components/_doc.scss
+++ b/assets/scss/components/_doc.scss
@@ -379,7 +379,7 @@ h2 {
         display: block;
         content: ' ';
         width: 5rem;
-        border-bottom: 2px solid $mainBrandColor;
+        border-bottom: 2px solid $primary;
         margin-bottom: 1.1rem;
         visibility: visible;
     }
