--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,13 +1,15 @@
 .header {
-  color: $primary;
-  background-color: #ffffff;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  box-shadow: 0 1px 15px rgba(50, 50, 93, 0.2);
+  height: 80px;
+  color: $primary;
+  background-color: $white;
+  box-shadow: 0 2px 10px 0 rgba($black, 0.1);
+
   .container {
-    display: flex;
+    display: inherit;
     justify-content: space-between;
     align-items: center;
+    height: 100%;
   }
 }
