--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   height: 80px;
-  color: $primary;
   background-color: $white;
+  color: $primary;
   box-shadow: 0 2px 10px 0 rgba($black, 0.1);
 
   .container {
@@ -11,5 +11,9 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
+
+    .button {
+      margin-left: 24px;
+    }
   }
 }
