--- a/assets/scss/components/_sections.scss
+++ b/assets/scss/components/_sections.scss
@@ -1,63 +1,21 @@
-.section---white {
+.section {
   background-color: $white;
 }
 
-.section---grey {
-  background-color: #f4f5fb;
-}
+.section-primary {
+  background-color: $primary;
 
-.section---diagonal {
-  transform: skewY(5deg);
-  padding-bottom: 50px;
-  margin-bottom: 65px;
-
-  > div {
-    transform: skewY(-5deg);
+  h1,
+  h2,
+  p {
+    color: $white;
   }
 }
 
-.section--primary-gradient {
-  background-image: linear-gradient(to right, $primary, $secondary);
-}
-
-.section--primary-gradient-top-bottom {
-  background-image: linear-gradient(to bottom, $primary, $secondary);
-}
-
-.section--primary {
-  background-color: $primary;
-}
-
-.section--primary-opacity {
+.section-primary-opacity {
   background-color: $primary-opacity;
 }
 
-.section--secondary {
+.section-secondary {
   background-color: $secondary;
-}
-
-.section--diagonal-right {
-  margin-top: -100px;
-  transform: skewY(-5deg);
-  padding-bottom: 100px;
-  > div {
-    transform: skewY(5deg);
-  }
-}
-
-.section--diagonal-left {
-  margin-top: -100px;
-  transform: skewY(5deg);
-  padding-bottom: 100px;
-  > div {
-    transform: skewY(-5deg);
-  }
-}
-
-.section--bg-contain {
-  background-size: contain;
-}
-
-.section--bg-cover {
-  background-size: cover;
 }
