--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -29,10 +29,11 @@ $link-hover-decoration: underline;
 
 // Fonts
 $font-family-base: 'Open Sans', Arial, sans-serif, -apple-system;
-$font-family-heading: 'Open Sans', Arial, sans-serif, -apple-system;
+$font-family-heading: $font-family-base;
 $font-weight-thin: 200;
 $font-weight-light: 300;
 $font-weight-normal: 400;
+$font-weight-semibold: 600;
 $font-weight-bold: 700;
 $font-weight-base: $font-weight-normal;
 $line-height-base: 1.6;
