--- a/layouts/partials/large_icon.html
+++ b/layouts/partials/large_icon.html
@@ -1,1 +1,1 @@
-{{- $name := . -}}<svg class="large_icon"><use xlink:href="/img/icons.svg#{{ $name }}"/></svg>
+{{- $name := . -}}<svg class="large_icon"><use xlink:href="/images/icons.svg#{{ $name }}"/></svg>
