--- a/assets/scss/general/_typography.scss
+++ b/assets/scss/general/_typography.scss
@@ -1,22 +1,25 @@
 body.page-home,
 body.page-why-keptn {
   h1 {
-    font-weight: $font-weight-semibold;
     font-size: 2.8rem;
-    line-height: 1.5;
+    line-height: 1.4;
   }
 
   h2 {
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 16px;
     font-size: 2.3rem;
-    line-height: 1.5;
+    line-height: 1.4;
+    font-weight: $font-weight-semibold;
 
     &:before {
-      margin-bottom: 0;
+      display: none;
     }
   }
 
-  h3 {
-    font-size: 1.5rem;
+  p {
+    margin-top: 0;
+    margin-bottom: 16px;
+    font-size: 1.35rem;
   }
 }
