Start implementation on home

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -19,6 +19,14 @@
     }
   }
 
+  // Onboard Services
+  .onboard-services {
+    .col-6 p:first-of-type {
+      margin-bottom: 32px;
+      font-size: 1.125rem;
+    }
+  }
+
   // Teaser
   .teaser {
     h1 {
