--- a/assets/scss/general/_base.scss
+++ b/assets/scss/general/_base.scss
@@ -1,18 +1,42 @@
 body.page {
-  margin-top: 80px;
+  margin-top: 100px;
   margin-bottom: 50px;
   font-family: $font-family-base;
   font-size: 1rem;
+}
+
+body.page-home,
+body.page-why-keptn {
+  .header-link {
+    display: none;
+  }
 
   a {
     font-family: $font-family-base;
     color: $textColor;
     text-decoration: underline;
   }
-}
 
-body.page-home {
-  .header-link {
-    display: none;
+  p {
+    margin-top: 0;
+    margin-bottom: 16px;
+    font-size: 1.35rem;
+  }
+
+  h1 {
+    font-size: 2.8rem;
+    line-height: 1.4;
+  }
+
+  h2 {
+    margin-top: 0;
+    margin-bottom: 16px;
+    font-size: 2.3rem;
+    line-height: 1.4;
+    font-weight: $font-weight-semibold;
+
+    &:before {
+      display: none;
+    }
   }
 }
